Fix issue where page is horizontally scrollable  when trail elements are too close to the edge of the page

--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -1,3 +1,7 @@
+body {
+	overflow-x: hidden;
+}
+
 /********      App       ********/
 
 .App {
@@ -128,7 +132,6 @@
 		transform: scale(0);
 	}
 }
-
 
 /******** Portfolio Grid ********/
 .portfolio {
